# skiller

./: .gitignore  CHANGELOG.md  README.md  RELEASE.md  SIGNING.md  package.json  signing-config.sh
.github/workflows/: ci.yml  release.yml
scripts/: release.sh
src/: App.tsx
src-tauri/: Cargo.toml  entitlements.plist  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: commands.rs  lib.rs
src/api/: registry.ts
src/components/: Card.css  FilterDropdown.css  InstallMenu.css  InstallMenu.tsx  InstalledList.css  Panel.tsx  Settings.tsx  SkillDetail.css  SkillDetail.tsx  SkillList.tsx  SortDropdown.tsx  TabBar.css  Toast.css  Toast.tsx
src/contexts/: ToastContext.tsx
src/hooks/: useSkills.ts
src/styles/: index.css
src/types/: index.ts
